Use List.of() instead of Collections.emptyList().
Signed-off-by: Annabel Wang <annabelwyn11@gmail.com>